--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nodedl",
-  "version": "1.0.0",
+  "version": "1.0.1a",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "nodedl": "./index.js"
+    "nodedl": "./bin/index.js"
   },
   "preferGlobal": true,
   "author": "aeryax",
