--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodedl",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "an easy way to stream your file from command line",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "preferGlobal": true,
   "author": "aeryax",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "akeypair": "^0.2.4",
     "colors": "^1.1.2",
@@ -23,7 +23,7 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/Aeryax/nodedl.git"
+    "url": "git+https://github.com/Aeryax/nodedl.git"
   },
   "keywords": [
     "stream",
